--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -1,15 +1,19 @@
-<!doctype html>
-<!--[if lt IE 9]><html class="no-js no-svg ie lt-ie9 lt-ie8 lt-ie7" {{ site.language_attributes }}> <![endif]-->
-<!--[if IE 9]><html class="no-js no-svg ie ie9 lt-ie9 lt-ie8" {{ site.language_attributes }}> <![endif]-->
-<!--[if gt IE 9]><!--><html class="no-js no-svg" {{ site.language_attributes }}> <!--<![endif]-->
-<head>
-    <meta charset="{{ site.charset }}" />
+{# <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>eikon parcel starter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> #}
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="{{ site.charset }}">
+    <title>cafe du marche</title>
     <meta name="description" content="{{ site.description }}">
-    <link rel="stylesheet" href="{{ site.theme.link }}/style.css" type="text/css" media="screen" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="author" href="{{ site.theme.link }}/humans.txt" />
-    <link rel="pingback" href="{{ site.pingback_url }}" />
-    <link rel="profile" href="http://gmpg.org/xfn/11">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    {# <link rel="stylesheet" href="https://use.typekit.net/ebt4fqo.css"> #}
+
     {{function('wp_head')}}
