--- a/templates/base.twig
+++ b/templates/base.twig
@@ -10,18 +10,28 @@
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
 		<header class="header" >
 			{% block header %}
-				<div class="wrapper">
+				{# <div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
 						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
 					</h1>
 					<nav id="nav-main" class="nav-main" role="navigation">
 						{% include "menu.twig" with {'items': menu.get_items} %}
 					</nav><!-- #nav -->
-				</div>
+				</div> #}
 			{% endblock %}
 		</header>
 
-		<section id="content" role="main" class="content-wrapper">
+		<!-- start: main content area -->
+		<main>
+
+			{% block content %}
+				Sorry, no content
+			{% endblock %}
+
+		</main>
+		<!-- start: main content area -->
+
+		{# <section id="content" role="main" class="content-wrapper">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
 				{% block content %}
@@ -33,7 +43,7 @@
 					{{sidebar}}
 				</aside>
 			{% endif %}
-		</section>
+		</section> #}
 
 		{% block footer %}
 			<footer id="footer">
