--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,51 @@
-Copyright {{"now"|date('Y')}}
+{# Copyright {{"now"|date('Y')}} #}
+
+    <footer id="contacts">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <img src="img/CafeDuMarcheLogo3.9b4ce2f4.svg" alt="" class="logofooter">
+          </div>
+
+          <div class="row text-center">
+            <div class="col-10 col-md-4 offset-1 offset-md-4">
+              <div class="line"></div>
+            </div>
+          </div>
+
+          <div class="coordinate">
+            <div class="row">
+              <div class="col-12 col-md-6 col-lg-4">
+                <a href="tel:+41764651078">
+                  <p>
+                    <img src="img/phone.fill.13929f4e.svg" alt="">+41 (0)76 465 10 78
+                  </p>
+                </a>
+              </div>
+              <div class="col-12 col-md-6 col-lg-4">
+                <a href="mailto:catherinebal2weck@gmail.com">
+                  <p>
+                    <img src="img/envelope.fill.ad43dad7.svg" alt="">catherinebal2weck@gmail.com
+                  </p>
+                </a>
+              </div>
+              <div class="col-12 col-md-12 col-lg-4">
+                <a href="https://www.instagram.com/cafe_du_marche_fribourg/" target="_blank">
+                  <p>
+                    <img src="img/instagram.2e10e8bb.svg" alt="">cafe_du_marche_fribourg
+                  </p>
+                </a>
+              </div>
+            </div>
+
+            <div class="copyright">
+              <div class="row">
+                <div class="col-12">
+                  <p>© 2024  Le Café du Marché, tous droits réservés</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
