--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -39,12 +39,12 @@
 	{{post.content}} #}
 
 
-      <main>
+    <main>
       <div class="home">
-        <img src="img/CafeDuMarcheTables.d9f366c1.jpg" alt="" class="background-image">
+        <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeDuMarcheTables-1.jpg" alt="" class="background-image">
         <h1>
           <div class="title-container">
-            <img src="img/CafeDuMarcheLogo2.cd1c56c6.svg" alt="">
+            <img src="img/CafeDuMarcheLogo2.svg" alt="">
           </div>
         </h1>
       </div>
@@ -74,7 +74,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-xl-6 order-xl-2">
-              <img src="img/croissants.e4ea1285.jpg" alt="">
+              <img src="img/croissants.jpg" alt="">
             </div>
             <div class="col-12 col-xl-6 order-xl-1">
               <h3>Cuisine Saisonnière et Variée</h3>
@@ -91,20 +91,20 @@
               <div class="carousel-container">
                 <!-- Flèche de gauche pour le carousel -->
                 <div class="carousel-arrow left-arrow">
-                  <img src="img/chevron.left.569f4cd4.svg" alt="Flèche gauche">
+                  <img src="img/chevron.left.svg" alt="Flèche gauche">
                 </div>
 
                 <!-- Carousel d'images -->
                 <div class="carousel">
-                  <img src="img/plats.8d788431.jpg" alt="Image 1">
-                  <img src="img/plats2.560b1675.jpg" alt="Image 2">
-                  <img src="img/plats3.81e33b55.jpg" alt="Image 3">
+                  <img src="img/plats.jpg" alt="Image 1">
+                  <img src="img/plats2.jpg" alt="Image 2">
+                  <img src="img/plats3.jpg" alt="Image 3">
                   <!-- Ajoutez plus d'images ici selon vos besoins -->
                 </div>
 
                 <!-- Flèche de droite pour le carousel -->
                 <div class="carousel-arrow right-arrow">
-                  <img src="img/chevron.right.3f61c7a0.svg" alt="Flèche droite">
+                  <img src="img/chevron.right.svg" alt="Flèche droite">
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
               <a href="#reserver">
                 <div class="button">Réserver la salle</div>
               </a>
-              <img src="img/SalleManger.0db8ef87.jpg" alt="">
+              <img src="img/SalleManger.jpg" alt="">
             </div>
           </div>
         </div>
@@ -171,26 +171,26 @@
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Vente à emporter <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Options pour Tous les
+                <img src="img/checkmark.svg" alt="">Vente à emporter <br>
+                <img src="img/checkmark.svg" alt="">Options pour Tous les
                 Goûts <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Produits frais
+                <img src="img/checkmark.svg" alt="">Produits frais
               </p>
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Cuisine de saison et fait
+                <img src="img/checkmark.svg" alt="">Cuisine de saison et fait
                 maison <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Terrasse <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Salle à Manger
+                <img src="img/checkmark.svg" alt="">Terrasse <br>
+                <img src="img/checkmark.svg" alt="">Salle à Manger
               </p>
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Ambiance Conviviale <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Accueil de petits groupes
+                <img src="img/checkmark.svg" alt="">Ambiance Conviviale <br>
+                <img src="img/checkmark.svg" alt="">Accueil de petits groupes
                 <br>
-                <img src="img/checkmark.74c59e3a.svg" alt="">Bon cadeau
+                <img src="img/checkmark.svg" alt="">Bon cadeau
               </p>
             </div>
           </div>
