--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -41,10 +41,10 @@
 
     <main>
       <div class="home">
-        <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeDuMarcheTables-1.jpg" alt="" class="background-image">
+        <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeDuMarcheTables.jpg" alt="" class="background-image">
         <h1>
           <div class="title-container">
-            <img src="img/CafeDuMarcheLogo2.svg" alt="">
+            <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeDuMarcheLogo2.svg" alt="">
           </div>
         </h1>
       </div>
@@ -74,7 +74,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-xl-6 order-xl-2">
-              <img src="img/croissants.jpg" alt="">
+              <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/croissants.jpg" alt="">
             </div>
             <div class="col-12 col-xl-6 order-xl-1">
               <h3>Cuisine Saisonnière et Variée</h3>
@@ -91,20 +91,20 @@
               <div class="carousel-container">
                 <!-- Flèche de gauche pour le carousel -->
                 <div class="carousel-arrow left-arrow">
-                  <img src="img/chevron.left.svg" alt="Flèche gauche">
+                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/chevron.left_.svg" alt="Flèche gauche">
                 </div>
 
                 <!-- Carousel d'images -->
                 <div class="carousel">
-                  <img src="img/plats.jpg" alt="Image 1">
-                  <img src="img/plats2.jpg" alt="Image 2">
-                  <img src="img/plats3.jpg" alt="Image 3">
+                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/plats.jpg" alt="Image 1">
+                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/plats2.jpg" alt="Image 2">
+                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/plats3.jpg" alt="Image 3">
                   <!-- Ajoutez plus d'images ici selon vos besoins -->
                 </div>
 
                 <!-- Flèche de droite pour le carousel -->
                 <div class="carousel-arrow right-arrow">
-                  <img src="img/chevron.right.svg" alt="Flèche droite">
+                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/chevron.right_.svg" alt="Flèche droite">
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
               <a href="#reserver">
                 <div class="button">Réserver la salle</div>
               </a>
-              <img src="img/SalleManger.jpg" alt="">
+              <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/SalleManger.jpg" alt="">
             </div>
           </div>
         </div>
@@ -171,8 +171,8 @@
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.svg" alt="">Vente à emporter <br>
                 <img src="img/checkmark.svg" alt="">Options pour Tous les
+                <img src="img/checkmark.svg" alt="">Vente à emporter <br>
                 Goûts <br>
                 <img src="img/checkmark.svg" alt="">Produits frais
               </p>
