--- a/templates/base.twig
+++ b/templates/base.twig
@@ -8,18 +8,18 @@
 
 	<body class="{{body_class}}" data-template="base.twig">
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
-		{# <header class="header" >
+		<header class="header" >
 			{% block header %}
-				<div class="wrapper">
+				{# <div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
 						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
 					</h1>
 					<nav id="nav-main" class="nav-main" role="navigation">
 						{% include "menu.twig" with {'items': menu.get_items} %}
 					</nav><!-- #nav -->
-				</div>
+				</div> #}
 			{% endblock %}
-		</header> #}
+		</header>
 
 		<!-- start: main content area -->
 		<main>
