--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -88,29 +88,19 @@
               </a>
             </div>
             <div class="col-12 order-xl-3">
-              <div class="carousel-container">
-                <!-- Flèche de gauche pour le carousel -->
-                <div class="carousel-arrow left-arrow">
-                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/chevron.left_.svg" alt="Flèche gauche">
-                </div>
-
-                <!-- Carousel d'images -->
-                <div class="carousel">
+              <!-- Carousel d'images -->
+              <div class="carousel">
+                <button id="prevButton" class="carousel-button">&lt;</button>
                   <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/plats.jpg" alt="Image 1">
                   <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/plats2.jpg" alt="Image 2">
                   <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/plats3.jpg" alt="Image 3">
-                  <!-- Ajoutez plus d'images ici selon vos besoins -->
-                </div>
-
-                <!-- Flèche de droite pour le carousel -->
-                <div class="carousel-arrow right-arrow">
-                  <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/chevron.right_.svg" alt="Flèche droite">
-                </div>
+                <button id="nextButton" class="carousel-button">&gt;</button>
               </div>
             </div>
           </div>
         </div>
       </div>
+
 
       <div id="menu" class="menu">
         <div class="card">
