--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img src="img/CafeDuMarcheLogo3.9b4ce2f4.svg" alt="" class="logofooter">
+            <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeDuMarcheLogo3.svg" alt="" class="logofooter">
           </div>
 
           <div class="row text-center">
@@ -15,24 +15,25 @@
 
           <div class="coordinate">
             <div class="row">
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-lg-4">
                 <a href="tel:+41764651078">
                   <p>
-                    <img src="img/phone.fill.13929f4e.svg" alt="">+41 (0)76 465 10 78
+                    <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/phone.fill_.svg" alt="" class="icon">+41
+                    (0)76 465 10 78
                   </p>
                 </a>
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-lg-4">
                 <a href="mailto:catherinebal2weck@gmail.com">
                   <p>
-                    <img src="img/envelope.fill.ad43dad7.svg" alt="">catherinebal2weck@gmail.com
+                    <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/envelope.fill_.svg" alt="" class="icon">catherinebal2weck@gmail.com
                   </p>
                 </a>
               </div>
-              <div class="col-12 col-md-12 col-lg-4">
+              <div class="col-12 col-lg-4">
                 <a href="https://www.instagram.com/cafe_du_marche_fribourg/" target="_blank">
                   <p>
-                    <img src="img/instagram.2e10e8bb.svg" alt="">cafe_du_marche_fribourg
+                    <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/instagram.svg" alt="" class="icon">cafe_du_marche_fribourg
                   </p>
                 </a>
               </div>
