--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -161,9 +161,8 @@
             </div>
             <div class="col-12 col-md-4">
               <p>
-                <img src="img/checkmark.svg" alt="">Options pour Tous les
+                <img src="img/checkmark.svg" alt="">Options pour tous les goûts <br>
                 <img src="img/checkmark.svg" alt="">Vente à emporter <br>
-                Goûts <br>
                 <img src="img/checkmark.svg" alt="">Produits frais
               </p>
             </div>
