--- a/templates/base.twig
+++ b/templates/base.twig
@@ -8,8 +8,43 @@
 
 	<body class="{{body_class}}" data-template="base.twig">
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
-		<header class="header" >
+		{# <header class="header" > #}
 			{% block header %}
+
+			    <header>
+					<div class="container">
+						<div class="row">
+						<div class="col-12 header-content">
+							<img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeduMarcheLogo1.svg" alt="" class="logo">
+							<div class="link">
+							<a href="#menu">Carte</a>
+							<a href="#info">Infos</a>
+							<a href="#reserver">Réserver</a>
+							<a href="#contacts">Contacts</a>
+							<!-- Début Bouton pour le menu burger -->
+							<button class="menu-toggle" aria-label="Menu Toggle">
+								<img src="img/line.3.horizontal.svg" alt="Menu Toggle">
+							</button>
+							<!-- Fin Bouton pour le menu burger -->
+							<!-- SVG pour le menu déroulant -->
+							<!-- Ajoutez les liens à l'intérieur du menu déroulant -->
+							<div class="menu-dropdown">
+								<div class="linktwo">
+								<a href="#menu">Carte</a>
+								<a href="#info">Infos</a>
+								<a href="#reserver">Réserver</a>
+								<a href="#contacts">Contacts</a>
+								</div>
+								<!-- Ajoutez l'image de la croix pour fermer le menu déroulant -->
+								<img src="img/croix.svg" alt="Menu Dropdown" class="close-button">
+							</div>
+							<!-- SVG pour le menu déroulant -->
+							</div>
+						</div>
+						</div>
+					</div>
+				</header>
+
 				{# <div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
 						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
@@ -19,7 +54,7 @@
 					</nav><!-- #nav -->
 				</div> #}
 			{% endblock %}
-		</header>
+		{# </header> #}
 
 		<!-- start: main content area -->
 		<main>
