--- a/templates/base.twig
+++ b/templates/base.twig
@@ -23,7 +23,7 @@
 							<a href="#contacts">Contacts</a>
 							<!-- Début Bouton pour le menu burger -->
 							<button class="menu-toggle" aria-label="Menu Toggle">
-								<img src="img/line.3.horizontal.svg" alt="Menu Toggle">
+								<img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/line.3.horizontal.svg" alt="Menu Toggle">
 							</button>
 							<!-- Fin Bouton pour le menu burger -->
 							<!-- SVG pour le menu déroulant -->
