--- a/templates/base.twig
+++ b/templates/base.twig
@@ -36,7 +36,7 @@
 								<a href="#contacts">Contacts</a>
 								</div>
 								<!-- Ajoutez l'image de la croix pour fermer le menu déroulant -->
-								<img src="img/croix.svg" alt="Menu Dropdown" class="close-button">
+								<img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/croix.svg" alt="Menu Dropdown" class="close-button">
 							</div>
 							<!-- SVG pour le menu déroulant -->
 							</div>
