--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -8,7 +8,7 @@
           </div>
 
           <div class="row text-center">
-            <div class="col-10 col-md-4 offset-1 offset-md-4">
+            <div class="col-10 col-lg-4 offset-1 offset-lg-4">
               <div class="line"></div>
             </div>
           </div>
