--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -77,6 +77,9 @@
               <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/croissants.jpg" alt="">
             </div>
             <div class="col-12 col-xl-6 order-xl-1">
+              <div class="col-4 offset-4">
+                <div class="cookingline"></div>
+              </div>
               <h3>Cuisine Saisonnière et Variée</h3>
               <p>
                 Une carte éphémère, sur ardoise, changeant au gré des saisons.
@@ -86,6 +89,9 @@
               <a href="#menu">
                 <div class="button">Voir la carte de la semaine</div>
               </a>
+              <div class="col-4 offset-4">
+                <div class="cookingline"></div>
+              </div>
             </div>
             <div class="col-12 order-xl-3">
               <!-- Carousel d'images -->
