--- a/css/index.css
+++ b/css/index.css
@@ -5287,14 +5287,24 @@ h2 {
 
 @media (width >= 768px) {
   .card {
-    padding: 100px;
+    padding: 85px;
   }
 }
 
-@media (width >= 1200px) {
-  .card {
-    padding: 150px;
-  }
+.cardline {
+  background-color: #eae0ce;
+  align-items: center;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 10%;
+}
+
+.menu h3 {
+  margin-bottom: 4%;
+}
+
+.menu p {
+  margin-bottom: 6%;
 }
 
 .room {
