--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -114,13 +114,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
+                    <div class="col-6 offset-3">
+                      <div class="cardline"></div>
+                    </div>
                     <h3>{{ front_page_post.title }}</h3>
+                    <div class="col-4 offset-4">
+                      <div class="cardline"></div>
+                    </div>
                     {# <h3>Cette semaine, à midi, nous vous proposons :</h3> #}
                 </div>
                 <div class="col-12">
                     <p>
                         {{ front_page_post.content }}
                     </p>
+                    <div class="col-4 offset-4">
+                      <div class="cardline"></div>
+                    </div>
                 </div>
             </div>
         </div>
