--- a/css/index.css
+++ b/css/index.css
@@ -5330,6 +5330,44 @@ h2 {
   padding-top: 50px;
 }
 
+.title-with-lines {
+  text-align: center;
+  display: inline-block;
+  position: relative;
+}
+
+.title-with-lines:before, .title-with-lines:after {
+  content: "";
+  background-color: #2c1315;
+  width: 60px;
+  height: 1px;
+  position: absolute;
+  top: 50%;
+}
+
+.title-with-lines:before {
+  left: -80px;
+}
+
+.title-with-lines:after {
+  right: -80px;
+}
+
+@media (width <= 768px) {
+  .title-with-lines:before, .title-with-lines:after {
+    content: "";
+    width: 50px;
+  }
+
+  .title-with-lines:before {
+    left: -60px;
+  }
+
+  .title-with-lines:after {
+    right: -60px;
+  }
+}
+
 .service {
   color: #2c1315;
   text-align: center;
