--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -40,7 +40,7 @@
 
 
     <main>
-      <div class="home">
+      <div class="home parallax">
         <img src="http://localhost/wp_cafedumarche/wordpress/wp-content/uploads/2024/05/CafeDuMarcheTables.jpg" alt="" class="background-image">
         <h1>
           <div class="title-container">
