--- a/css/index.css
+++ b/css/index.css
@@ -5356,15 +5356,15 @@ h2 {
 @media (width <= 768px) {
   .title-with-lines:before, .title-with-lines:after {
     content: "";
-    width: 50px;
+    width: 20px;
   }
 
   .title-with-lines:before {
-    left: -60px;
+    left: -25px;
   }
 
   .title-with-lines:after {
-    right: -60px;
+    right: -25px;
   }
 }
 
@@ -5679,6 +5679,14 @@ body {
 
 #nextButton {
   right: 10px;
+}
+
+@media (width <= 768px) {
+  .carousel img {
+    object-fit: cover;
+    width: 100%;
+    height: 40vh;
+  }
 }
 
 .parallax {
